# dbt-access-management

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  dbt_project.yml  pyproject.toml
cli/: access_management_config_file_parser.py  access_management_rows_generator.py  constants.py  data_masking_config_file_parser.py  data_masking_rows_generator.py  exceptions.py  main.py  model.py
cli/access_mangement/: access_management_config_file_parser.py  access_management_config_parser.py  access_management_rows_generator.py  configure_access_management_macro_properties_provider.py
cli/data_masking/: configure_data_masking_macro_properties_provider.py  data_masking_config_file_parser.py  (+2 more)
dbt_access_management/: access_management_rows_generator.py  cli.py  constants.py
macros/: _macros.yml  apply_masking_policies_for_model.sql  check_model_has_masking_policies_attached.sql  check_should_drop_configuration_table.sql  check_snapshot_table_has_masking_policies_attached.sql  configure.sql  configure_access_management.sql  configure_data_masking.sql  configure_masking_policies.sql  create_access_management_table.sql  create_project_related_masking_policies.sql  execute_all_grants.sql  execute_grants.sql  execute_grants_for_configured_entities.sql  execute_grants_for_configured_identities.sql  execute_grants_for_model.sql  execute_revoke_all_for_configured_entities.sql  execute_revoke_all_for_configured_identities.sql  get_database_identities.sql  get_objects_in_database.sql  validate_configured_entities.sql  validate_configured_identities.sql
(+27 files in other folders)
